--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged npm && run lint && npm run test"
+      "pre-commit": "pretty-quick --staged npm && npm run lint && npm run test"
     }
   },
   "author": "Natalie Cyreus",
