--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jest-dom": "^3.1.3",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
+    "react-axe": "^3.1.0",
     "react-testing-library": "^6.0.3",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
