--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
     "husky": "^1.3.1",
     "jest": "^24.5.0",
     "jest-dom": "^3.1.3",
+    "node-sass": "^4.12.0",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
     "react-axe": "^3.1.0",
     "react-testing-library": "^6.0.3",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
     "webpack-bundle-analyzer": "^3.1.0",
@@ -59,6 +61,7 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
